# protopipe-grid-interface

./: .gitignore  .mailmap  .prospector.yaml  CODEOWNERS  README.md  README.rst  Vagrantfile  create_analysis_tree.py  delete_files.py  download_and_merge.sh  download_files.py  environment.yaml  environment_development.yaml  environment_release.yaml  example_configuration.cfg  example_download_and_merge.sh  example_split_jobs.py  example_upload_models.sh  filter_by_replicas.py  filter_lfns_by_replicas.py  find_file_by_disk.sh  grid.yaml  merge_tables.py  mr_filter  pilot.sh  requirements.txt  setup.cfg  setup.py  setup.sh  split_dataset.py  split_jobs.py  submit_jobs.py  submit_jobs_new_scheme.py  upload_file.py  upload_models.sh  utils.py
.github/: install.sh  release-drafter.yml  test.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml  docker_dev.yml
containers/: CTADIRAC_singularity  Vagrantfile
containers/Docker/Development/: Dockerfile  environment_development.yaml
containers/Docker/Latest_release/: Dockerfile
protopipe_grid_interface/: __init__.py  _dev_version.py  utils.py  version.py
protopipe_grid_interface/aux/: grid.yaml  logging.yaml  standard_analysis_workflow.yaml
protopipe_grid_interface/scripts/: create_analysis_tree.py  cta_wms_set_failed.py  delete_files.py  download_and_merge.py  download_files.py  filter_lfns_by_replicas.py  get_input_LFNs.py  merge_tables.py  split_dataset.py  submit_jobs.py  upload_file.py  upload_models.py
tests/: test_merge.py  test_split_dataset.py
(+5 files in other folders)
