[metadata]
name = protopipe-grid-interface
description = Interface to the DIRAC grid for the prototype pipeline for the Cherenkov Telescope Array (CTA)
long_description = file: README.rst
author = Dr. Michele Peresano et al.
author_email = michele.peresano@cea.fr
license = CeCILL-B Free Software License Agreement
url = https://github.com/HealthyPear/protopipe-grid-interface
edit_on_github = False
github_project = HealthyPear/protopipe-grid-interface

[flake8]
exclude=
  build,
  docs,
  .eggs
max-line-length=90
#ignore=W291,E303,W391,F403,F401,W503,W1202
select = C,E,F,W,B,B950
ignore = E501,W503,E203
per-file-ignores =
    */__init__.py: F401, F403

[pycodestyle]
count = False
ignore = E501,W503,E203
max-line-length = 90
statistics = True

[yapf] # a code reformatter
based_on_style: pep8
dedent_closing_brackets: true
coalesce_brackets: true
join_multiple_lines: true